<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_steel_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLectureClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_lecture_class"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinLectureClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLectureSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_lecture_subject"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinLectureSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLectureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_lecture_date"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/editLectureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:editable="false"
                android:textColor="@color/color_white" />

            <ImageButton
                android:id="@+id/imgButtonCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:contentDescription="@string/selectdate"
                android:cropToPadding="true"
                android:src="@drawable/calendar_icon" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLectureList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_lecture_list"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinLectureList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnViewAttendance"
            android:layout_weight="1"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/rectangular_corner"
            android:text="@string/str_btn_view_attendance"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>