<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_steel_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scr_add_subject_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_subject_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/editSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Subject"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scr_add_subject_margin" >

        <TextView
            android:id="@+id/txtSubjectFacultyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_txt_subject_faculty_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinSubjectFacultyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSubjectFacultyName"
            android:layout_weight="1"
            android:background="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scr_add_subject_margin" >

        <TextView
            android:id="@+id/txtSubjectClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinSubjectFacultyName"
            android:layout_weight="1"
            android:text="@string/str_txt_subject_class_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinSubjectClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSubjectClassName"
            android:layout_weight="1"
            android:background="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scr_add_subject_margin" >

        <Button
            android:id="@+id/btnAddSubjectName"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/rectangular_corner"
            android:text="@string/str_btn_add_subject"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>