<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_steel_blue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStudentRollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_txt_student_roll_no"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editStudentRollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_txt_student_roll_no"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStudentFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_txt_student_first_name"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editStudentFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_txt_student_first_name"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtstudentLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_txt_student_last_name"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/editStudentLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_txt_student_last_name"
                android:textColor="@color/color_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStudentClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_txt_student_class"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <Spinner
                android:id="@+id/spinStudentClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtThumbImpressionRegisterStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/str_txt_thumb_impression"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/imgViewBlackTrasparentBackground"
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="@dimen/image_view_height"
                    android:src="@drawable/black_transparent" />

                <ImageView
                    android:id="@+id/imgViewThumbImpressionRegisterStudent"
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="@dimen/image_view_height" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scr_register_student_margin"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/scr_start_lecture_marginRight"
                android:layout_weight="0.5"
                android:background="@drawable/rectangular_corner"
                android:text="@string/str_btn_register_student"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scr_start_lecture_marginLeft"
                android:layout_weight="0.5"
                android:background="@drawable/rectangular_corner"
                android:text="@string/str_btn_cancel"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>